<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FakkuDroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="fail_load_title_doujin">Fail loading doujin\'s title</string>
    <string name="fail_load_serie_doujin">Fail loading serie</string>
    <string name="fail_load_description_doujin">Fail loading description</string>
    <string name="fail_load_artist_doujin">Fail loading artist</string>
    <string name="fail_load_language_doujin">Fail loading language</string>
    <string name="fail_load_translator_doujin">Fail loading translator</string>
    <string name="fail_load_uploader_doujin">Fail loading uploader</string>
    <string name="fail_load_page_doujin">Fail loading quantity of pages and favorites</string>
    <string name="fail_load_tags_doujin">Fail loading tags</string>
    <string name="label_serie">Serie:</string>
    <string name="label_artist">Artist:</string>
    <string name="label_description">Description:</string>
    <string name="label_language">Language:</string>
    <string name="label_translator">Translator:</string>
    <string name="content_uploader">uploaded by rpc1, rpc2</string>
    <string name="content_pages">rpc1 pages, rpc2 favorites</string>
    <string name="label_tags">Tags:</string>
    <string name="button_refresh">Refresh</string>
    <string name="title_activity_doujin">DoujinActivity</string>
    <string name="add_favorite">Add to Favorite</string>
    <string name="read_online">Read Online</string>
    <string name="read_doujin">Read Doujin</string>
    <string name="mangas">Mangas</string>
    <string name="doujinshis">Doujinshis</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="sortByNewest">Sort by&#8230; Newest</string>
    <string name="sortByEnglish">Sort by&#8230; English</string>
    <string name="sortByTags">Sort by&#8230; Tags</string>
    <string name="sortBySeries">Sort by&#8230; Series</string>
    <string name="sortByArtist">Sort by&#8230; Artist</string>
    <string name="mostControversial">Most Controversial</string>
    <string name="mostFavorites">Most Favorites</string>
    <string name="mostPopular">Most Popular</string>
    <string name="random">Random</string>
    <string name="title_activity_list_option">ListOptionActivity</string>
    <string name="loading">Loading&#8230;</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="tile_tag">Tag rpc1</string>
    <string name="tile_serie">Serie rpc1</string>
    <string name="tile_artist">Artist rpc1</string>
    <string name="tile_language">Language rpc1</string>
    <string name="tile_translator">Translator rpc1</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="read">Read</string>
    <string name="remove_favorite">Remove from favorite</string>
    <string name="my_favorites">My favorites</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="login_please">Your are not logged. Do you want to log in?</string>
    <string name="view_browser">View in Browser</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_gallery_swipe">GallerySwipeActivity</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="favorite">Favorite of usr</string>
    <string name="reading_japanese">Reading: Japanese</string>
    <string name="reading_western">Reading: Western</string>
    <string name="next_page">Next Page</string>
    <string name="previous_page">Previous Page</string>
    <string name="page_1">Page 1</string>
    <string name="browse">Browse</string>
    <string name="logged">You are logged in.</string>
    <string name="added_favorite">Added to Favorite</string>
    <string name="removed_favorite">Removed from Favorite</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about">About FakkuDroid</string>
    <string name="loggedout">You are logged out.</string>
    <string name="comments">Comments</string>
    <string name="related_content">Related Content</string>
    <string name="in_construction">In Construction</string>
    <string name="go_to">Go to&#8230;</string>
	<string name="go_to_first">Go to First Page</string>
	<string name="go_to_last">Go to Last Page</string>
	<string name="error_page_out">Error: Number Page</string>	
	<string name="reply">Reply</string>	
	<string name="like">Like +1</string>	
	<string name="dislike">Dislike -1</string>	
	<string name="come_back">Come back</string>	
	<string name="soon">Soon</string>	
	<string name="load_more">Load more&#8230;</string>	
	<string name="image_html">
	    <![CDATA[
	    	<html>
	    		<head>
	    			<script src=\"http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js\"></script>
	    		</head>
	    		<body style=\"margin: 0 0 0 0;\">
	    			<script type=\"text/javascript\">
	    				$(window).load(function() {resizeAll(@width,@height);});
	    				$(window).bind(\'resize\', resizeWindow);
	    				
	    				function resizeWindow(e) {
	    					if(first){
	    						if(japaneseMode)
	    							$(\'body\').scrollLeft(5000);
	    						else 
	    							$(\'body\').scrollLeft(0);
	    					}
	    					first = false;
	    				}
	    				
	    				var japaneseMode = @japaneseMode;
	    				var first = true;
	    				
	    				function resizeAll(maxWidth, maxHeight){
	    					$(\'.resized\').each(function() {
	    						var ratio = 0;
	    						var width = $(this).width();
	    						var height = $(this).height();
	    						if(width<=height||maxWidth>maxHeight){
	    							ratio = maxWidth / width;
	    							$(this).css(\'width\', maxWidth);
	    							$(this).css(\'height\', height * ratio);
	    							height = height * ratio;
	    							width = width * ratio;
	    						}else{
	    							ratio = maxHeight / height;
	    							$(this).css(\'height\', maxHeight);
	    							$(this).css(\'width\', width * ratio);
	    							width = width * ratio;
	    						}
	    					});
	    					if(japaneseMode)
	    						$(\'body\').scrollLeft(5000);
	    					else 
	    						$(\'body\').scrollLeft(0);
	    							
	    				}	
	    			</script>
	    			<img class=\"resized\" src = \"@url\" style=\"padding:0px;\"/>
	    		</body>
	    	</html>
	    ]]>	    
	</string>
	<string name="image_html_percent">
	    <![CDATA[
	    	<html>
	    		<body style=\"margin: 0 0 0 0;\">
	    			<img style=\"width:@percentage%;\" src =\"@url\" style=\"padding:0px;\"/>
	    		</body>
	    	</html>
	    ]]>
	</string>
</resources>