<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_login"
        android:orderInCategory="0"
        android:showAsAction="never"
        android:title="@string/login"/>
    <item
        android:id="@+id/menu_myfavorites"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/my_favorites"/>
    <item
        android:id="@+id/menu_browser"
        android:orderInCategory="30"
        android:showAsAction="never"
        android:title="@string/browse">
        <menu>
            <item
                android:id="@+id/menu_doujinshis"
                android:orderInCategory="30"
                android:showAsAction="never"
                android:title="@string/doujinshis"/>
            <item
                android:id="@+id/menu_mangas"
                android:orderInCategory="20"
                android:showAsAction="never"
                android:title="@string/mangas"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_search"
        android:showAsAction="ifRoom"
        android:orderInCategory="10"
        android:title="@string/search">
    </item>
    <item
        android:id="@+id/menu_check_for_updates"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/check_for_updates">
    </item>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/about">
    </item>

</menu>