<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:id="@+id/tvDoujin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.61"
            android:text="@string/fail_load_title_doujin"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white" />

        <view
            android:id="@+id/btnDetails"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.13"
            class="com.fakkudroid.util.ActionImageButton2"
            android:background="@android:color/transparent"
            android:contentDescription="@string/details"
            android:scaleType="center"
            android:src="@drawable/collections_view_as_list" />

        <view
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.13"
            class="com.fakkudroid.util.ActionImageButton2"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete"
            android:scaleType="center"
            android:src="@drawable/content_discard" />

        <view
            android:id="@+id/btnReadOnline"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.13"
            class="com.fakkudroid.util.ActionImageButton2"
            android:background="@android:color/transparent"
            android:contentDescription="@string/read"
            android:scaleType="center"
            android:src="@drawable/av_play" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <WebView
            android:id="@+id/wvTitle"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:layout_margin="3dp"
            android:src="@drawable/loading" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/wvTitle"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_serie"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSerie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fail_load_serie_doujin"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/lblArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_artist"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fail_load_artist_doujin"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_description"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fail_load_description_doujin"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>